# discordGatingBot

./: .dockerignore  .gitignore  Dockerfile  README.md  cliff.toml
.github/: codecov.yml
.github/workflows/: always.yml  check.yml  pull-requests.yml  release.yml  safety.yml  scheduled.yml  test.yml
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  README.tpl  bench-config-large.toml  bench-config.toml  benchmark_results.md  build.rs
backend/completion/: _discord-gating-bot  _discord-gating-bot.ps1  discord-gating-bot.bash  discord-gating-bot.elv  discord-gating-bot.fish
backend/man/: discord-gating-bot-completion.1  discord-gating-bot-config.1  discord-gating-bot-discord.1  discord-gating-bot-key.1  discord-gating-bot-storage.1  discord-gating-bot.1
backend/src/: cli.rs  colony_client.rs  command.rs  config.rs  controller.rs  discord.rs  gate.rs  logging.rs  main.rs  server.rs  storage.rs
backend/src/gate/: reputation.rs  token.rs
backend/static/: error.html  index.html  registered-already.html  registration-expired.html  registration-invalid-session.html  registration-success.html  registration.html  unregistration.html
backend/templates/: button.stpl  form_input.stpl  index.js  skeleton.stpl
frontend/: .gitignore  CONTRIBUTING.md  README.md  package-lock.json  package.json  tailwind.config.js
frontend/src/: index.css  index.ts
frontend/www/: getin.html  getout.html  index.html  invite.html
