[package]
name = "discord-gating-bot"
version = "0.1.0"
edition = "2021"
license = "GPLv3"
description = """A discord bot that can grant discord roles on a server based on reputation in a specific colony"""
readme = "README.md"
authors =["Hans Mündelein <hans@muendelein.me>", "Christian Maniewski <code@chmanie.com>"]
categories = ["blockchain", "bot", "discord", "chat"]

[features]
default = []
completion = ["dep:clap_complete"]
max_level_debug = ["tracing/release_max_level_debug"]
max_level_info = ["tracing/release_max_level_info"]
max_level_warn = ["tracing/release_max_level_warn"]

[dependencies]
actix-web = { version = "4.3.0", features = ["rustls"] }
anyhow = "1.0.69"
bincode = "1.3.3"
chacha20poly1305 = "0.10.1"
clap = { version = "3.2.15", features = ["cargo", "derive"] }
clap_complete = { version = "3.2.3", optional = true }
colony-rs = { git = "https://github.com/JoinColony/colonyRS.git", branch = "main" }
confique = "0.2.2"
futures = "0.3.26"
hex = "0.4.3"
once_cell = "1.13.0"
sailfish = "0.6.0"
serde = { version = "1.0.142", features = ["derive"] }
serde_derive = "1.0.142"
serenity = { version = "0.11.5", default-features = false, features = ["client", "collector", "model",  "gateway", "rustls_backend" ] }
sled = "0.34.7"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.36" }
tracing-appender = "0.2.2"
tracing-log = "0.1.3"
tracing-subscriber = "0.3.15"
urlencoding = "2.1.2"

[build-dependencies]
clap = { version = "3.2.15", features = ["cargo", "derive"] }
clap_complete = "3.2.3"
clap_mangen = "0.1.10"
confique = "0.2.2"
once_cell = "1.13.0"
serde = { version = "1.0.142", features = ["derive"] }
serde_derive = "1.0.142"
tracing-log = "0.1.3"

