[package]
name = "discord-gating-bot"
version = "0.1.0"
edition = "2021"
license = "GPLv3"
description = """A discord bot that can grant discord roles on a server based on reputation in a specific colony"""
readme = "README.md"
authors = [
    "Hans Mündelein <hans@muendelein.me>",
    "Christian Maniewski <code@chmanie.com>",
]
categories = ["blockchain", "bot", "discord", "chat"]

[features]
profiling = ["pprof"]
jaeger-telemetry = [
    "opentelemetry-jaeger",
    "tracing-opentelemetry",
    "opentelemetry",
]

[dependencies]
actix-web = { version = "4.3.1", features = ["rustls"] }
anyhow = "1.0.70"
async-trait = "0.1.68"
bincode = "1.3.3"
cached = { version = "0.42.0", features = ["async_tokio_rt_multi_thread"] }
chacha20poly1305 = "0.10.1"
clap = { version = "4.2.1", features = ["cargo", "derive"] }
colony-rs = { git = "https://github.com/JoinColony/colonyRS.git", branch = "main" }
# colony-rs = { path = "../../colonyRS"}
confique = "0.2.3"
convert_case = "0.6.0"
dyn-clone = "1.0.11"
enum-iterator = "1.4.0"
futures = "0.3.28"
governor = "0.5.1"
hex = "0.4.3"
log = { version = "0.4.17" }
nonzero_ext = "0.3.0"
once_cell = "1.17.1"
opentelemetry = { version = "0.18.0", features = ["rt-tokio"], optional = true }
opentelemetry-jaeger = { version = "0.17.0", features = [
    "tokio",
    "rt-tokio",
], optional = true }
pprof = { version = "0.11.1", features = ["flamegraph"], optional = true }
regex = "1.7.3"
sailfish = "0.6.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_derive = "1.0.159"
serenity = { version = "0.11.5", default-features = false, features = [
    "client",
    "collector",
    "model",
    "gateway",
    "rustls_backend",
] }
sled = "0.34.7"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-actix-web = "0.7.3"
tracing-appender = "0.2.2"
tracing-log = "0.1.3"
tracing-opentelemetry = { version = "0.18.0", optional = true }
tracing-subscriber = "0.3.16"
typetag = "0.2.7"
urlencoding = "2.1.2"

[build-dependencies]
clap = { version = "4.2.1", features = ["cargo", "derive"] }
clap_complete = "4.2.0"
clap_mangen = "0.2.10"
confique = "0.2.3"
once_cell = "1.17.1"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_derive = "1.0.159"
tracing-log = "0.1.3"
